examples/legacy/CSharp/NdisApi/ndisapi.cs

/*************************************************************************/
/*                                                                       */
/* Copyright (c) 2000-2013 NT KERNEL RESOURCES, All Rights Reserved.     */
/* http://www.ntkernel.com                                               */
/*																		 */
/* Description: WinpkFilter C# interface	    						 */
/*************************************************************************/

using System;
using System.Runtime.InteropServices;
using System.Text;
using Microsoft.Win32.SafeHandles;

namespace NdisApiWrapper
{
    public static class Ndisapi
    {
        // Some size constants
        public const int ADAPTER_NAME_SIZE = 256;
        public const int ADAPTER_LIST_SIZE = 32;
        public const int ETHER_ADDR_LENGTH = 6;
        public const int MAX_ETHER_FRAME = 1514;

        // Adapter flags
        public const uint MSTCP_FLAG_SENT_TUNNEL = 0x00000001;	// Receive packets sent by MSTCP
        public const uint MSTCP_FLAG_RECV_TUNNEL = 0x00000002;	// Receive packets instead MSTCP
        public const uint MSTCP_FLAG_SENT_LISTEN = 0x00000004;	// Receive packets sent by MSTCP, original ones delivered to the network
        public const uint MSTCP_FLAG_RECV_LISTEN = 0x00000008;	// Receive packets received by MSTCP
        public const uint MSTCP_FLAG_FILTER_DIRECT = 0x00000010;	// In promiscuous mode TCP/IP stack receives all
        // all packets in the ethernet segment, to prevent this set this flag
        // All packets with destination MAC different from FF-FF-FF-FF-FF-FF and
        // network interface current MAC will be blocked

        // By default loopback packets are passed to original MSTCP handlers without processing,
        // to change this behavior use the flags below
        public const uint MSTCP_FLAG_LOOPBACK_FILTER = 0x00000020; // Pass loopback packet for processing 
        public const uint MSTCP_FLAG_LOOPBACK_BLOCK = 0x00000040; // Silently drop loopback packets, this flag
        // is recommended for usage in combination with 
        // promiscuous mode

        // Device flags for intermediate buffer
        public const uint PACKET_FLAG_ON_SEND = 0x00000001;
        public const uint PACKET_FLAG_ON_RECEIVE = 0x00000002;

        // WAN connections relative constants
        public const int RAS_LINK_BUFFER_LENGTH = 1024;
        public const int RAS_LINKS_MAX = 256;

        // ETH_802_3_FILTER flags
        public const uint ETH_802_3_SRC_ADDRESS = 0x00000001;
        public const uint ETH_802_3_DEST_ADDRESS = 0x00000002;
        public const uint ETH_802_3_PROTOCOL = 0x00000004;

        // IP_V4_FILTER flags
        public const uint IP_V4_FILTER_SRC_ADDRESS = 0x00000001;
        public const uint IP_V4_FILTER_DEST_ADDRESS = 0x00000002;
        public const uint IP_V4_FILTER_PROTOCOL = 0x00000004;

        // IP_V6_FILTER flags
        public const uint IP_V6_FILTER_SRC_ADDRESS = 0x00000001;
        public const uint IP_V6_FILTER_DEST_ADDRESS = 0x00000002;
        public const uint IP_V6_FILTER_PROTOCOL = 0x00000004;

        // Filter select flags
        public const uint ETH_802_3 = 0x00000001;
        public const uint IPV4 = 0x00000001;
        public const uint IPV6 = 0x00000002;
        public const uint TCPUDP = 0x00000001;

        // IP_ADDRESS_V4 select flags
        public const uint IP_SUBNET_V4_TYPE = 0x00000001;
        public const uint IP_RANGE_V4_TYPE = 0x00000002;

        // IP_ADDRESS_V6 select flags
        public const uint IP_SUBNET_V6_TYPE = 0x00000001;
        public const uint IP_RANGE_V6_TYPE = 0x00000002;

        // TCPUDP_FILTER validity flags
        public const uint TCPUDP_SRC_PORT = 0x00000001;
        public const uint TCPUDP_DEST_PORT = 0x00000002;
	public const uint TCPUDP_TCP_FLAGS = 0x00000004;

        // Global filter flags
        public const uint FILTER_PACKET_PASS = 0x00000001; // Pass packet if if matches the filter
        public const uint FILTER_PACKET_DROP = 0x00000002; // Drop packet if it matches the filter
        public const uint FILTER_PACKET_REDIRECT = 0x00000003; // Redirect packet to WinpkFilter client application

        public const uint DATA_LINK_LAYER_VALID = 0x00000001; // Match packet against data link layer filter
        public const uint NETWORK_LAYER_VALID = 0x00000002; // Match packet against network layer filter
        public const uint TRANSPORT_LAYER_VALID = 0x00000004; // Match packet against transport layer filter

        public const String NDISRD_DRIVER_NAME = "NDISRD";

        [DllImport("ndisapi.dll")]
        private static extern IntPtr OpenFilterDriver(byte[] pszFileName);

        /// <summary>
        /// Creates a pointer to the filter driver.
        /// </summary>
        public static IntPtr OpenFilterDriver(String fileName = NDISRD_DRIVER_NAME)
        {
            byte[] arr = Encoding.GetEncoding("ISO-8859-1").GetBytes(fileName);
            return OpenFilterDriver(arr);
        }

        [DllImport("ndisapi.dll")]
        public static extern void CloseFilterDriver(IntPtr hOpen);

        [DllImport("ndisapi.dll")]
        public static extern uint GetDriverVersion(IntPtr hOpen);

        [DllImport("ndisapi.dll")]
        public static extern bool GetTcpipBoundAdaptersInfo(IntPtr hOpen, ref TCP_AdapterList Adapters);

        [DllImport("ndisapi.dll")]
        public static extern bool SendPacketToMstcp(IntPtr hOpen, ref ETH_REQUEST Packet);

        [DllImport("ndisapi.dll")]
        public static extern bool SendPacketToAdapter(IntPtr hOpen, ref ETH_REQUEST Packet);

        [DllImport("ndisapi.dll")]
        public static extern bool ReadPacket(IntPtr hOpen, ref ETH_REQUEST Packet);

        [DllImport("ndisapi.dll")]
        public static extern bool SendPacketsToMstcp(IntPtr hOpen, ref ETH_M_REQUEST Packets);

        [DllImport("ndisapi.dll")]
        public static extern bool SendPacketsToAdapter(IntPtr hOpen, ref ETH_M_REQUEST Packets);

        [DllImport("ndisapi.dll")]
        public static extern bool ReadPackets(IntPtr hOpen, ref ETH_M_REQUEST Packets);

        [DllImport("ndisapi.dll")]
        public static extern bool SetAdapterMode(IntPtr hOpen, ref ADAPTER_MODE Mode);

        [DllImport("ndisapi.dll")]
        public static extern bool GetAdapterMode(IntPtr hOpen, ref ADAPTER_MODE Mode);

        [DllImport("ndisapi.dll")]
        public static extern bool FlushAdapterPacketQueue(IntPtr hOpen, IntPtr hAdapter);

        [DllImport("ndisapi.dll")]
        public static extern bool GetAdapterPacketQueueSize(IntPtr hOpen, IntPtr hAdapter, ref uint dwSize);

        [DllImport("ndisapi.dll")]
        public static extern bool SetPacketEvent(IntPtr hOpen, IntPtr hAdapter, SafeWaitHandle hWin32Event);

        [DllImport("ndisapi.dll")]
        public static extern bool SetWANEvent(IntPtr hOpen, SafeWaitHandle hWin32Event);

        [DllImport("ndisapi.dll")]
        public static extern bool SetAdapterListChangeEvent(IntPtr hOpen, SafeWaitHandle hWin32Event);

        [DllImport("ndisapi.dll")]
        public static extern bool NdisrdRequest(IntPtr hOpen, ref PACKET_OID_DATA OidData, bool Set);

        [DllImport("ndisapi.dll")]
        private static extern bool GetRasLinks(IntPtr hOpen, IntPtr hAdapter, IntPtr pLinks);

        public static RAS_LINKS GetRasLinks(IntPtr hOpen, IntPtr hAdapter)
        {
            IntPtr linksPtr = Marshal.AllocHGlobal(Marshal.SizeOf(typeof(RAS_LINKS)));
            try
            {
                bool result = GetRasLinks(hOpen, hAdapter, linksPtr);

                if (!result) throw new Exception("Cannot get RAS links.");
                return (RAS_LINKS)Marshal.PtrToStructure(linksPtr, typeof(RAS_LINKS));
            }
            finally
            {
                Marshal.FreeHGlobal(linksPtr);
            }
        }

        [DllImport("ndisapi.dll")]
        public static extern bool SetHwPacketFilter(IntPtr hOpen, IntPtr hAdapter, uint Filter);

        [DllImport("ndisapi.dll")]
        public static extern bool GetHwPacketFilter(IntPtr hOpen, IntPtr hAdapter, ref uint pFilter);

        [DllImport("ndisapi.dll")]
        public static extern bool SetPacketFilterTable(IntPtr hOpen, ref STATIC_FILTER_TABLE pFilterList);

        [DllImport("ndisapi.dll")]
        public static extern bool ResetPacketFilterTable(IntPtr hOpen);

        [DllImport("ndisapi.dll")]
        public static extern bool GetPacketFilterTableSize(IntPtr hOpen, ref uint pdwTableSize);

        [DllImport("ndisapi.dll")]
        public static extern bool GetPacketFilterTable(IntPtr hOpen, ref STATIC_FILTER_TABLE pFilterList);

        [DllImport("ndisapi.dll")]
        public static extern bool GetPacketFilterTableResetStats(IntPtr hOpen, ref STATIC_FILTER_TABLE pFilterList);

        [DllImport("ndisapi.dll")]
        public static extern uint GetMTUDecrement();

        [DllImport("ndisapi.dll")]
        public static extern bool SetMTUDecrement(uint dwMTUDecrement);

        [DllImport("ndisapi.dll")]
        public static extern uint GetAdaptersStartupMode();

        [DllImport("ndisapi.dll")]
        public static extern bool SetAdaptersStartupMode(uint dwStartupMode);

        [DllImport("ndisapi.dll")]
        public static extern bool IsDriverLoaded(IntPtr hOpen);

        [DllImport("ndisapi.dll")]
        public static extern uint GetBytesReturned(IntPtr hOpen);

        [DllImport("ndisapi.dll")]
        private unsafe static extern bool ConvertWindows2000AdapterName(byte* szAdapterName, byte* szUserFriendlyName, uint dwUserFriendlyNameLength);

        [DllImport("ndisapi.dll")]
        private unsafe static extern bool ConvertWindows9xAdapterName(byte* szAdapterName, byte* szUserFriendlyName, uint dwUserFriendlyNameLength);

        [DllImport("ndisapi.dll")]
        private unsafe static extern bool ConvertWindowsNTAdapterName(byte* szAdapterName, byte* szUserFriendlyName, uint dwUserFriendlyNameLength);

        // Simple wrappers for the rotines above (simplifies usage from C#)
        private static unsafe string ConvertAdapterName(byte* bAdapterName, uint dwPlatformId, uint dwMajorVersion)
        {
            byte[] szAdapterName = new byte[256];
            bool success = false;
            string res = null;
            fixed (byte* pbFriendlyName = szAdapterName)
            {
                if (dwPlatformId == 2/*VER_PLATFORM_WIN32_NT*/)
                {
                    if (dwMajorVersion > 4)
                    {
                        // Windows 2000 or XP
                        success = ConvertWindows2000AdapterName(bAdapterName, pbFriendlyName, (uint)szAdapterName.Length);
                    }
                    else if (dwMajorVersion == 4)
                    {
                        // Windows NT 4.0	
                        success = ConvertWindowsNTAdapterName(bAdapterName, pbFriendlyName, (uint)szAdapterName.Length);
                    }
                }
                else
                {
                    // Windows 9x/ME
                    success = ConvertWindows9xAdapterName(bAdapterName, pbFriendlyName, (uint)szAdapterName.Length);
                }
                if (success)
                {
                    int indexOfZero = 0;
                    while (indexOfZero < 256 && szAdapterName[indexOfZero] != 0)
                        ++indexOfZero;
                    res = Encoding.Default.GetString(szAdapterName, 0, indexOfZero);
                }
            }
            return res;
        }

        [Obsolete("Use TCP_AdapterList.GetName() instead.")]
        public static unsafe string ConvertAdapterName(byte[] bAdapterName, int iNameStart, uint dwPlatformId, uint dwMajorVersion)
        {
            fixed (byte* tmp = &bAdapterName[iNameStart])
            {
                return ConvertAdapterName(tmp, dwPlatformId, dwMajorVersion);
            }
        }

    }
